modificacion de detalles

--- a/BlogPersonal/Views/Home/_Contacto.cshtml
+++ b/BlogPersonal/Views/Home/_Contacto.cshtml
@@ -3,11 +3,10 @@
 <div style="padding-top: 6rem;" id="seccion4">
     <h1>Keep in Contact</h1>
 </div>
-<div class="container" >
-   
+<div class="container">
     <div class="row row-cols-1 row-cols-md-2">
-        <div class="col">
-            <img id="foto" src="~/Imagenes/logoYo.jpg" alt="MyFoto"/>
+        <div class="col align-content-center justify-content-center d-flex">
+            <img src="~/Imagenes/monoContacto.jpg" alt=".netFoto" id="foto"/>
         </div>
         <div class="col">
             <h1>Send me a message...</h1>
